# npmsync

./: .gitignore  Dockerfile  README.md  build-and-run.sh  npmsync.py  podman-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
npmsync/: __init__.py  cli.py  core.py
